<resources>
    <string name="app_name">InvestUp</string>
    <string name="Enter">Войти</string>
    <string name="To_register">Регистрация</string>
    <string name="Authorize">Авторизация</string>
    <string name="To_authorize">К авторизации</string>
    <string name="Register">Регистрация</string>
    <string name="Create_account">Создать аккаунт</string>
    <string name="Hint_password">Пароль</string>
    <string name="Hint_firstname">Имя</string>
    <string name="Hint_surname">Фамилия</string>
    <string name="Hint_login">Логин</string>
    <string name="Hint_old_password">Старый пароль</string>
    <string name="Hint_new_password">Новый пароль</string>
    <string name="Hint_repeat_password">Повторение пароля</string>
    <string name="Change_password">Изменить пароль</string>
    <string name="Change_data">Изменить данные</string>
    <string name="Hint_title">Название</string>
    <string name="Hint_short_description">Краткое описание</string>
    <string name="Hint_full_description">Описание идеи</string>
    <string name="Delete_video">Удалить видео</string>
    <string name="Add_video">Загрузить видео</string>
    <string name="Post_upload">Опубликовать</string>
    <string name="Comments">Комментарии</string>
    <string name="Post">Пост</string>
    <string name="Delete">Удалить</string>
    <string name="Edit">Редактировать</string>
    <string name="Edit_delete">Редактировать/Удалить</string>
    <string name="Edit_post">Редактирование поста</string>


    <string name="Add_to_favorite">Добавить в избранное</string>

    <string name="Delete_from_favorite">Удалить из избранного</string>


    <string name="Contact">Связаться</string>

    <string name="Report">Жалоба</string>
    <string name="Are_you_sure_about_delete_message">Вы уверенны, что хотите удалить данное сообщение?</string>
    <string name="Add">Добавить</string>
    <string name="Your_post">Ваши посты</string>
    <string name="Exit_from_acc">Выйти</string>
    <string name="Creating_post">Создание поста</string>
    <string name="Home">Главная</string>
    <string name="Dialog">Диалог</string>
    <string name="Comment_upload_success">Комментарий опубликован</string>
    <string name="Post_upload_success">Пост успешно создан</string>
    <string name="Chat">Чат</string>
    <string name="Favorite">Избранное</string>
    <string name="Profile">Аккаунт</string>
    <string name="Success">Успешно</string>
    <string name="Edit_profile">Изменение профиля</string>
    <string name="Save">Сохранить</string>
    <string name="Success_delete">Пост успешно удален</string>
    <string name="Unexpected_error">Неизвестная ошибка</string>
    <string name="Add_comment">Добавить комментарий…</string>
    <string name="Toast_saved_data">Данные сохранены</string>
    <string name="Toast_saved_password">Пароль обновлен</string>
    <string name="Toast_unexpected_error">Неизвестная ошибка</string>
    <string name="Toast_success_add_to_favorite">Пост перемещен в избранное</string>
    <string name="Toast_success_delete_from_favorite">Пост удален из избранного</string>

    <string name="Sort">Сортировка:</string>


    <string name="Sort_date_new">Сначала новые</string>
    <string name="Sort_date_old">Сначала старые</string>
    <string name="Sort_view_max">Сначала популярные</string>
    <string name="Sort_view_min">Сначала непопулярные</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Comment_delete_success">Комментарий успешно удален</string>
    <string name="Your_posts">Ваши посты</string>
    <string name="Users_post">Посты пользователя</string>
    <string name="Message">Сообщение</string>
    <string name="Empty_favorite">Пока ничего нет</string>
    <string name="Authorize_error">Ошибка авторизации</string>
    <string name="User_profile">Профиль пользователя</string>
    <string name="Are_you_sure_about_delete_post">Вы уверенны, что хотите удалить пост?</string>
    <string name="Yes">Да</string>
    <string name="Cancel">Отмена</string>
    <string name="Are_you_sure_about_delete_comment">Вы уверенны, что хотите удалить комментарий?</string>
    <string name="Are_you_sure_about_exit">Вы уверенны, что хотите выйти из аккаунта?</string>
    <string name="Post_success_edit">Пост успешно изменен</string>
    <string name="Send">Отправить</string>
    <string name="Write_message_to_user">Напишите сообщение пользователю</string>
    <string name="Message_">Сообщение...</string>
    <string name="Write_about_report_user">Опишите подробно причину жалобы на данного пользователя</string>
    <string name="Write_about_report_post">Опишите подробно причину жалобы на данный пост</string>
    <string name="Description_report">Описание жалобы...</string>
    <string name="Report_success">Жалоба успешно отправлена</string>
</resources>