<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/Home"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/baseline_question_answer_24"
        android:title="@string/Chat"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/Favorite"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/Profile"
        android:orderInCategory="4"/>
</menu>