<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/Hint_title"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/shortDescriptionInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/Hint_short_description"
                    android:inputType="textMultiLine"
                    android:maxLength="178"
                    android:maxLines="5"
                    android:minHeight="48dp"
                    android:minLines="1"
                    app:layout_constraintEnd_toEndOf="@+id/titleInput"
                    app:layout_constraintStart_toStartOf="@+id/titleInput"
                    app:layout_constraintTop_toBottomOf="@+id/titleInput" />

                <EditText
                    android:id="@+id/fullDescriptionInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/Hint_full_description"
                    android:inputType="textMultiLine"
                    android:maxLines="15"
                    android:minHeight="48dp"
                    android:minLines="1"
                    app:layout_constraintEnd_toEndOf="@+id/shortDescriptionInput"
                    app:layout_constraintHeight_max="wrap"
                    app:layout_constraintHeight_min="wrap"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/shortDescriptionInput"
                    app:layout_constraintTop_toBottomOf="@+id/shortDescriptionInput" />


                <Button
                    android:id="@+id/uploadPostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.03"
                    android:text="@string/Post_upload"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/add_deleteVideoButton"
                    app:layout_constraintStart_toStartOf="@+id/add_deleteVideoButton"
                    app:layout_constraintTop_toBottomOf="@+id/videosView" />

                <TextView
                    android:id="@+id/add_deleteVideoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="16dp"
                    android:elevation="8dp"
                    android:text="@string/Add_video"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tagsRcView" />

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/videosView"
                    android:layout_width="0dp"
                    android:layout_height="300dp"

                    android:layout_marginTop="16dp"
                    android:background="#000000"
                    android:backgroundTint="#000000"
                    app:layout_constraintEnd_toEndOf="@+id/tagsRcView"
                    app:layout_constraintStart_toStartOf="@+id/tagsRcView"
                    app:layout_constraintTop_toBottomOf="@+id/add_deleteVideoButton"
                    app:resize_mode="fit" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tagsRcView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullDescriptionInput" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>